<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_charts"
            android:icon="@drawable/ic_menu_charts"
            android:title="@string/charts"/>
        <item
            android:id="@+id/action_in_theaters"
            android:icon="@drawable/ic_menu_theater"
            android:title="@string/theaters"/>
        <item
            android:id="@+id/action_popular_persons"
            android:icon="@drawable/ic_menu_popular_persons"
            android:title="@string/celebs"/>
    </group>

    <group
        android:id="@+id/menu_group_search"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/search" />
        <!--
        <item
            android:id="@+id/action_advanced_search"
            android:icon="@drawable/ic_menu_advanced_search"
            android:title="Advanced Search" />
    </group>

    <group
        android:id="@+id/menu_group_my_movies"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_watch_list"
            android:icon="@drawable/ic_menu_watch_list"
            android:title="@string/watch_list" />
    -->
        <item
            android:id="@+id/action_rated"
            android:icon="@drawable/ic_menu_rated_list"
            android:title="@string/my_rates" />
    </group>

    <group
        android:id="@+id/menu_group_others"
        android:checkableBehavior="none">
        <!--
        <item
            android:id="@+id/action_rate_app"
            android:icon="@drawable/ic_menu_rate_app"
            android:title="@string/rate_this"/>
            -->
        <item
            android:id="@+id/action_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/feedback" />
    </group>

</menu>